// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton > should render 1`] = `
<DocumentFragment>
  <span
    aria-busy="true"
    aria-live="polite"
    class="flex w-auto max-w-full items-center leading-none h-full"
    data-testid="Skeleton"
  >
    <span
      class="react-loading-skeleton z-0 dark:bg-theme-dark-800 rounded-lg"
      style="--animation-duration: 1.3s;"
    >
      ‌
    </span>
    <br />
  </span>
</DocumentFragment>
`;

exports[`Skeleton > should render circle 1`] = `
<DocumentFragment>
  <span
    aria-busy="true"
    aria-live="polite"
    class="flex w-auto max-w-full items-center leading-none h-full"
    data-testid="Skeleton"
  >
    <span
      class="react-loading-skeleton z-0 dark:bg-theme-dark-800"
      style="--animation-duration: 1.3s; border-radius: 50%;"
    >
      ‌
    </span>
    <br />
  </span>
</DocumentFragment>
`;
